Attempt to fix safe area issue on iOS

--- a/layout-single-column.css
+++ b/layout-single-column.css
@@ -4196,3 +4196,9 @@ div[tabindex="-1"] + div[tabindex="-1"] > .status__wrapper > .status-reply.statu
 .layout-single-column .compose-form .compose-form__buttons-wrapper {
   padding-bottom: calc(var(--gap-default) / 2);
 }
+
+@supports (-webkit-box-flex: none) {
+  body {
+    max-height: -webkit-fill-available !important;
+  }
+}
